k8s/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: qa.demo.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 80
